Fix sticky header covering jumplink target in chrome
Chrome doesn't permit the function of scroll-margin on elements that could potentially scroll, even if they do not. As that functionality wasn't needed, it's been removed

--- a/docs/_static/style.css
+++ b/docs/_static/style.css
@@ -670,11 +670,6 @@ p {
   margin-bottom: 8px;
 }
 
-/* prevent breakage if overflow happens */
-main section section {
-  overflow: auto;
-}
-
 dt.sig {
   overflow: auto;
   max-width: 100%;
@@ -687,7 +682,7 @@ section h3 {
 
 /* jumplinks and sticky header */
 :target {
-  scroll-margin-top: 40px;
+  scroll-margin-top: 60px;
 }
 
 /* scroll to top button */
